<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/balanceRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:text="@string/sell"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/sellEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sellEditText" />

    <EditText
        android:id="@+id/sellEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/sellTextView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/balanceRecycler" />

    <TextView
        android:id="@+id/sellTextView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="24dp"
        android:text="@string/eur"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/sellEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sellEditText" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:text="@string/buy"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/buyEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buyEditText" />

    <EditText
        android:id="@+id/buyEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:cursorVisible="false"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/sellTextView"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/sellEditText" />

    <TextView
        android:id="@+id/buyTextView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="24dp"
        android:text="@string/usd"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/buyEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buyEditText" />

    <Button
        android:id="@+id/convert"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/convert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
